update Josh's code using part 1 cleaned data

--- a/yunlong_project.ipynb
+++ b/yunlong_project.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "modify based on Josh's code\n",
-    "```python"
+    "modify based on Josh's code\n"
    ]
   },
   {
